--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Cat Perry's Favorite Cat</title>
 </head>
-<body></body>
+<body>
+</body>
 </html>
